# portfolio_analytics

./: pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
examples/: 01_european_options.ipynb  02_american_options.ipynb  03_pde_finite_difference.ipynb  04_asian_options.ipynb  04_pde_fd.ipynb  05_greeks.ipynb  06_jump_diffusion.ipynb
notebooks/: README.md
notebooks/utils/: notebook_helpers.py
requirements/: dev.txt
src/derivatives_pricing/: __init__.py  enums.py  exceptions.py  rates.py  stochastic_processes.py  utils.py
src/derivatives_pricing/tests/: conftest.py  helpers.py  test_asian.py  test_binomial_valuation.py  test_bsm_valuation.py  test_contracts_instantiation.py  test_control_variate.py  test_day_count.py  test_discount_curve.py  test_discrete_dividends.py  test_edge_cases.py  test_greeks.py  test_implied_volatility.py  test_market_environment.py  test_mc_greeks.py  test_mcs_valuation.py  test_params.py  test_pde.py  test_quantlib_comparison.py  test_quantlib_greeks_comparison.py  test_stochastic_processes.py  test_utils_parity_forward.py  test_valuation.py  test_valuation_purity.py
src/derivatives_pricing/valuation/: __init__.py  asian_analytical.py  binomial.py  bsm.py  contracts.py  core.py  implied_volatility.py  params.py  pde.py
src/portfolio_analytics/: __init__.py  backtesting.py  enums.py  exceptions.py  market_environment.py  portfolio_positions.py  rates.py  return_calcs.py  risk_metrics.py  stochastic_processes.py  utils.py  valuation.py  valuation_binomial.py  valuation_bsm.py  valuation_mcs.py  valuation_pde_fd.py  yfinance_utils.py
src/portfolio_analytics/simulation/: __init__.py  delta_hedging.py  pnl_attribution.py
src/portfolio_analytics/strategies/: __init__.py  condor.py
src/portfolio_analytics/tests/: conftest.py  helpers.py  test_asian.py  test_asian_analytical.py  test_backtesting.py  test_binomial_valuation.py  test_bsm_valuation.py  test_contracts_instantiation.py  test_control_variate.py  test_day_count.py  test_discount_curve.py  test_discrete_dividends.py  test_edge_cases.py  test_greeks.py  test_implied_volatility.py  test_market_environment.py  test_mc_greeks.py  test_mcs_valuation.py  test_params.py  test_pde.py  test_pde_fd_equivalence.py  test_pde_fd_quantlib_comparison.py  test_pricing_method_equivalence.py  test_quantlib_comparison.py  test_quantlib_greeks_comparison.py  test_return_calcs.py  test_stochastic_processes.py  test_utils_parity_forward.py  test_valuation.py  test_valuation_purity.py
src/portfolio_analytics/valuation/: __init__.py  asian.py  asian_analytical.py  barrier.py  binomial.py  bsm.py  contracts.py  core.py  heston.py  implied_volatility.py  monte_carlo.py  params.py  pde.py  pde_fd_implicit.py
src/portfolio_analytics/visualization/: __init__.py  greeks.py  payoffs.py  processes.py  surfaces.py  trees.py
src/portfolio_analytics/volatility/: __init__.py  sabr.py  surface.py  svi.py
tutorials/: 03_binomial_trees.ipynb  04_pde_fd.ipynb  05_monte_carlo.ipynb  06_asian_options.ipynb
