[project]
name = "portfolio_analytics"
version = "0.1.0"
description = "Python package for derivatives valuation"
authors = [
    { name = "TODO", email = "todo@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"

dependencies = [
    "numpy",
    "pandas",
    "scipy"
]

# Optional groups (e.g., dev, tests, docs)
[project.optional-dependencies]
dev = [
    "pytest>=9,<10",
    "black>=26,<27",
    "ruff>=0.15,<0.16",
    "mypy>=1.19,<2",
    "pre-commit>=4.5,<5",
    "pip-tools>=7.5,<8",
]
jupyter = [
    "jupyterlab>=4.3,<5",
    "ipykernel>=6.29,<7",
    "matplotlib>=3.9,<4",
    "plotly>=6,<7",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# Ruff (linter)
[tool.ruff]
line-length = 100
target-version = "py312"

# Black (formatter)
[tool.black]
line-length = 100
target-version = ["py312"]

# Pytest
[tool.pytest.ini_options]
pythonpath = ["src"]
log_cli = true
log_cli_level = "INFO"
