[project]
name = "portfolio_analytics"
version = "0.1.0"
description = "Python package for derivatives valuation"
authors = [
    { name = "TODO", email = "todo@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.24,<3.0",
    "pandas>=1.5,<4.0",
    "scipy>=1.10,<2.0",
]

# Optional groups (e.g., dev, tests, docs)
[project.optional-dependencies]
dev = [
    "pytest>=9,<10",
    "black>=26,<27",
    "ruff>=0.15,<0.16",
    "mypy>=1.19,<2",
    "pre-commit>=4.5,<5",
    "pip-tools>=7.5,<8",
]
jupyter = [
    "jupyterlab>=4.3,<5",
    "ipykernel>=6.29,<7",
    "matplotlib>=3.9,<4",
    "plotly>=6,<7",
]
quantlib = [
    "QuantLib>=1.36,<2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# Ruff (linter)
[tool.ruff]
line-length = 100
target-version = "py312"

# Black (formatter)
[tool.black]
line-length = 100
target-version = ["py312"]

# Pytest
[tool.pytest.ini_options]
pythonpath = ["src"]
log_cli = true
log_cli_level = "INFO"

# Mypy (very relaxed / developer-friendly)
[tool.mypy]
python_version = "3.12"

# Only check annotated functions
check_untyped_defs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Be permissive with imports and third-party libs
ignore_missing_imports = true
follow_imports = "skip"

# Be permissive with Optional / Any
strict_optional = false
warn_return_any = false
warn_no_return = false
warn_unreachable = false

# Reduce stylistic nags
warn_redundant_casts = false
warn_unused_ignores = false
no_implicit_reexport = false